--- a/app/index.html
+++ b/app/index.html
@@ -144,7 +144,7 @@
                     <h6 class="client small-grey-text">PRETTY GREEN</h6>
                     <h3 class="case-title">£1 million return from £45k spend. </h3>
                     <p class="service"><strong>Project services: </strong>PPC, CRO</p>
-                    <a href="/case.html" class="btn btn-orange clear">View case study</a>
+                    <a href="/pretty-green.html" class="btn btn-orange clear">View case study</a>
                   </div>
                 </div>
               </div>
@@ -156,8 +156,8 @@
                   <div class="col-xs-12 col-sm-6 case-content">
                     <h6 class="client small-grey-text">Origin global</h6>
                     <h3 class="case-title">Driving the business forward following a complex Google penalty </h3>
-                    <p class="service"><strong>Project services: </strong>Search Engine Optimisation</p>
-                    <a href="/case.html" class="btn btn-orange clear">View case study</a>
+                    <p class="service"><strong>Project services: </strong>SEO</p>
+                    <a href="/origin-global.html" class="btn btn-orange clear">View case study</a>
                   </div>
                 </div>
               </div>
@@ -171,7 +171,7 @@
                     <h6 class="client small-grey-text">CAPTAIN COVER</h6>
                     <h3 class="case-title">162% increase in conversion rate</h3>
                     <p class="service"><strong>Project services: </strong>PPC</p>
-                    <a href="/case.html" class="btn btn-orange clear">View case study</a>
+                    <a href="/captain-cover.html" class="btn btn-orange clear">View case study</a>
                   </div>
                 </div>
               </div>
@@ -185,7 +185,7 @@
                     <h6 class="client small-grey-text">JACKSON WOODTURNERS</h6>
                     <h3 class="case-title">ROI of £19.44 for every pound spent in AdWords</h3>
                     <p class="service"><strong>Project services: </strong>SEO, PPC</p>
-                    <a href="/case.html" class="btn btn-orange clear">View case study</a>
+                    <a href="/jackson-woodturners.html" class="btn btn-orange clear">View case study</a>
                   </div>
                 </div>
               </div>
@@ -199,7 +199,7 @@
                     <h6 class="client small-grey-text">DATATRACK LABS</h6>
                     <h3 class="case-title">887.50% YOY increase in goal completions</h3>
                     <p class="service"><strong>Project services: </strong>PPC, CRO</p>
-                    <a href="/case.html" class="btn btn-orange clear">View case study</a>
+                    <a href="/datatrack-labs.html" class="btn btn-orange clear">View case study</a>
                   </div>
                 </div>
               </div>
@@ -212,7 +212,7 @@
                     <h6 class="client small-grey-text">RUSSUMS</h6>
                     <h3 class="case-title">Delivering 25% increase year – on – year in organic traffic</h3>
                     <p class="service"><strong>Project services: </strong>SEO, PPC</p>
-                    <a href="/case.html" class="btn btn-orange clear">View case study</a>
+                    <a href="/russums.html" class="btn btn-orange clear">View case study</a>
                   </div>
                 </div>
               </div>
@@ -222,17 +222,18 @@
 
         <h6 class="small-grey-text text-center mt-3">Trusted by</h6>
         <ul class="trusted-by-carousel">
-          <li><img src="images/trusted/1.png" alt=""></li>
-          <li><img src="images/trusted/2.png" alt=""></li>
+          <!-- <li><img src="images/trusted/1.png" alt=""></li> -->
+          <!-- <li><img src="images/trusted/2.png" alt=""></li> -->
           <li><img src="images/trusted/3.png" alt=""></li>
           <li><img src="images/trusted/4.png" alt=""></li>
           <li><img src="images/trusted/5.png" alt=""></li>
           <li><img src="images/trusted/6.png" alt=""></li>
           <li><img src="images/trusted/7.png" alt=""></li>
-          <li><img src="images/trusted/8.png" alt=""></li>
+          <!-- <li><img src="images/trusted/8.png" alt=""></li> -->
           <li><img src="images/trusted/9.png" alt=""></li>
           <li><img src="images/trusted/10.png" alt=""></li>
           <li><img src="images/trusted/11.png" alt=""></li>
+          <!-- <li><img src="images/logos/prety-green.png" alt=""></li> -->
           <li><img src="images/trusted/12.png" alt=""></li>
           <li><img src="images/trusted/13.png" alt=""></li>
           <li><img src="images/trusted/14.png" alt=""></li>
@@ -240,7 +241,7 @@
           <li><img src="images/trusted/16.png" alt=""></li>
           <li><img src="images/trusted/17.png" alt=""></li>
           <li><img src="images/trusted/18.png" alt=""></li>
-          <li><img src="images/trusted/19.png" alt=""></li>
+          <!-- <li><img src="images/trusted/19.png" alt=""></li> -->
           <li><img src="images/trusted/20.png" alt=""></li>
           <li><img src="images/trusted/21.png" alt=""></li>
           <li><img src="images/trusted/22.png" alt=""></li>
@@ -263,7 +264,7 @@
           </div>
           <div class="col-xs-6">
             <span class="small-grey-text">Socials</span>
-            <ul class="social-media list-inline">
+            <ul class="social-media list-inline dash-before grey">
             <li><a href="https://www.facebook.com/IgnitionSearch/" target="_blank" class="fa fa-facebook"></a></li>
             <li><a href="https://twitter.com/ignitionsearch" target="_blank" class="fa fa-twitter"></a></li>
             <li><a href="https://uk.linkedin.com/company/ignition-search-ltd" target="_blank" class="fa fa-linkedin"></a></li>
