--- a/app/kitlocker.html
+++ b/app/kitlocker.html
@@ -175,7 +175,7 @@
           </div>
           <div class="col-xs-6">
             <span class="small-grey-text">Socials</span>
-            <ul class="social-media list-inline">
+            <ul class="social-media list-inline dash-before grey">
             <li><a href="https://www.facebook.com/IgnitionSearch/" target="_blank" class="fa fa-facebook"></a></li>
             <li><a href="https://twitter.com/ignitionsearch" target="_blank" class="fa fa-twitter"></a></li>
             <li><a href="https://uk.linkedin.com/company/ignition-search-ltd" target="_blank" class="fa fa-linkedin"></a></li>
