--- a/app/service.html
+++ b/app/service.html
@@ -29,13 +29,13 @@
         <a class="navbar-brand" href="/"><img src="images/logos/logo-white-transparent.png" alt=""></a>
         <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#" data-hover="Search Engine Optimisation">Search Engine Optimisation <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/seo.html" data-hover="Search Engine Optimisation">Search Engine Optimisation <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" data-hover="Pay Per Click">Pay Per Click</a>
+          <a class="nav-link" href="/ppc.html" data-hover="Pay Per Click">Pay Per Click</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" data-hover="Conversion Rate Optimisation">Conversion Rate Optimisation</a>
+          <a class="nav-link" href="cro.html" data-hover="Conversion Rate Optimisation">Conversion Rate Optimisation</a>
         </li>
       </ul>
         <a class="mobile bold d-none" tel="#">0114 272 2444</a>
@@ -50,12 +50,11 @@
             <li><a href="/advice-center.html">Advice Center</a></li>
             <li><a href="/contact.html">Contact Us</a></li>
           </ul>
-          <ul class="social-media list-inline">
-            <li><a href="#" class="fa fa-facebook"></a></li>
-            <li><a href="#" class="fa fa-twitter"></a></li>
-            <li><a href="#" class="fa fa-linkedin"></a></li>
-            <li><a href="#" class="fa fa-instagram"></a></li>
-          </ul>
+          <ul class="social-media list-inline"><li><a href="https://www.facebook.com/IgnitionSearch/" target="_blank" class="fa fa-facebook"></a></li>
+            
+            <li><a href="https://twitter.com/ignitionsearch" target="_blank" class="fa fa-twitter"></a></li>
+            <li><a href="https://uk.linkedin.com/company/ignition-search-ltd" target="_blank" class="fa fa-linkedin"></a></li>
+<li><a href="https://www.instagram.com/ignitionsearch/" target="_blank" class="fa fa-instagram"></a></li>   </ul>
         </div>
         <button type="button" class="close menu-link" aria-label="Close">
           <span aria-hidden="true">&times;</span>
