--- a/app/index.html
+++ b/app/index.html
@@ -40,13 +40,13 @@
       <a class="navbar-brand" href="/"><img src="images/logos/logo-white-transparent.png" alt=""></a>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#" data-hover="Search Engine Optimisation">Search Engine Optimisation <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/seo.html" data-hover="Search Engine Optimisation">Search Engine Optimisation <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" data-hover="Pay Per Click">Pay Per Click</a>
+          <a class="nav-link" href="/ppc.html" data-hover="Pay Per Click">Pay Per Click</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" data-hover="Conversion Rate Optimisation">Conversion Rate Optimisation</a>
+          <a class="nav-link" href="cro.html" data-hover="Conversion Rate Optimisation">Conversion Rate Optimisation</a>
         </li>
       </ul>
       <a class="mobile bold d-none" href="+01142722444">0114 272 2444</a>
