--- a/app/about-us.html
+++ b/app/about-us.html
@@ -38,7 +38,7 @@
           <a class="nav-link" href="cro.html" data-hover="Conversion Rate Optimisation">Conversion Rate Optimisation</a>
         </li>
       </ul>
-        <a class="mobile bold d-none" tel="#">0114 272 2444</a>
+        <span class="mobile bold d-none">0114 272 2444</span>
         
         <div class="sidenav">
           <ul class="nav-links">
