--- a/app/cro.html
+++ b/app/cro.html
@@ -38,7 +38,7 @@
           <a class="nav-link" href="cro.html" data-hover="Conversion Rate Optimisation">Conversion Rate Optimisation</a>
         </li>
         </ul>
-        <a class="mobile bold d-none" href="+01142722444">0114 272 2444</a>
+        <span class="mobile bold d-none">0114 272 2444</span>
         
         <div class="sidenav">
           <ul class="nav-links">
@@ -202,22 +202,22 @@
         <section class="case-examples">
             <div class="row no-gutters">
               <div class="col-12 col-md-6">
-                <a href="/origin-global.html">
+                <a href="/datatrack-labs.html">
                 <div class="bg-grey"></div>
-                <img src="images/service/origin-global.jpg" alt="" class="img-fluid">
+                <img src="images/case-studies/datatrack-labs.jpg" alt="" class="img-fluid">
                 <div class="centered-absolute">
-                  <span class="title small-grey-text">Origin Global</span>
-                  <h3>Driving the business forward following a complex Google penalty</h3>
+                  <span class="title small-grey-text"> Datatrack Labs</span>
+                  <h3>887.50% YOY increase in goal completions</h3>
                 </div>
                 </a>
               </div>
               <div class="col-12 col-md-6">
-                <a href="/russums.html">
+                <a href="/pretty-green.html">
                 <div class="bg-grey"></div>
-                <img src="images/service/russums.jpg" alt="" class="img-fluid">
+                <img src="images/case-studies/pretty-green.jpg" alt="" class="img-fluid">
                 <div class="centered-absolute">
-                  <span class="title small-grey-text">Russums </span>
-                  <h3>Delivering 25% increase year- on – year in organic traffic</h3>
+                  <span class="title small-grey-text">Pretty Green </span>
+                  <h3>£1 million return from £45k spend. </h3>
                 </div>
                 </a>
               </div>
