--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
           <a class="nav-link" href="cro.html" data-hover="Conversion Rate Optimisation">Conversion Rate Optimisation</a>
         </li>
       </ul>
-      <a class="mobile bold d-none" href="+01142722444">0114 272 2444</a>
+      <span class="mobile bold d-none">0114 272 2444</span>
 
       <div class="sidenav">
         <ul class="nav-links">
@@ -80,7 +80,7 @@
         <div class="container">
           <div class="slide-content col-8">
             <h2>Search Engine Optimisation</h2>
-            <p><strong>Grow your brand oganically.</strong> Give your customers expert content and increase Google visibility.</p>
+            <p><strong>Grow your brand organically.</strong> Give your customers expert content and increase Google visibility.</p>
             <a href="/seo.html" class="btn btn-learn-more">Learn more about SEO</a>
             <a href="#" class="btn btn-next-service">Next Service ⟶</a>
           </div>
