--- a/app/ppc.html
+++ b/app/ppc.html
@@ -38,7 +38,7 @@
           <a class="nav-link" href="cro.html" data-hover="Conversion Rate Optimisation">Conversion Rate Optimisation</a>
         </li>
         </ul>
-        <a class="mobile bold d-none" href="+01142722444">0114 272 2444</a>
+        <span class="mobile bold d-none">0114 272 2444</span>
         
         <div class="sidenav">
           <ul class="nav-links">
@@ -195,6 +195,33 @@
               </div>
             </div>
           </div>
+        </section>
+
+
+        <section class="case-examples">
+            <div class="row no-gutters">
+              <div class="col-12 col-md-6">
+                <a href="/captain-cover.html">
+                <div class="bg-grey"></div>
+                <img src="images/case-studies/captain-cover.jpg" alt="" class="img-fluid">
+                <div class="centered-absolute">
+                  <span class="title small-grey-text">Captain Cover</span>
+                  <h3>162% increase in conversion rate </h3>
+                </div>
+                </a>
+              </div>
+              <div class="col-12 col-md-6">
+                <a href="/jackson-woodturners.html">
+                <div class="bg-grey"></div>
+                <img src="images/case-studies/jackson.jpg" alt="" class="img-fluid">
+                <div class="centered-absolute">
+                  <span class="title small-grey-text">Jackson Woodturners  </span>
+                  <h3>ROI of £19.44 for every pound spent in AdWords</h3>
+                </div>
+                </a>
+              </div>
+
+            </div>
         </section>
 
 
