--- a/app/seo.html
+++ b/app/seo.html
@@ -38,7 +38,7 @@
           <a class="nav-link" href="cro.html" data-hover="Conversion Rate Optimisation">Conversion Rate Optimisation</a>
         </li>
         </ul>
-        <a class="mobile bold d-none" href="+01142722444">0114 272 2444</a>
+        <span class="mobile bold d-none">0114 272 2444</span>
         
         <div class="sidenav">
           <ul class="nav-links">
@@ -195,6 +195,33 @@
               </div>
             </div>
           </div>
+        </section>
+
+
+        <section class="case-examples">
+            <div class="row no-gutters">
+              <div class="col-12 col-md-6">
+                <a href="/origin-global.html">
+                <div class="bg-grey"></div>
+                <img src="images/service/origin-global.jpg" alt="" class="img-fluid">
+                <div class="centered-absolute">
+                  <span class="title small-grey-text">Origin Global</span>
+                  <h3>Driving the business forward following a complex Google penalty</h3>
+                </div>
+                </a>
+              </div>
+              <div class="col-12 col-md-6">
+                <a href="/russums.html">
+                <div class="bg-grey"></div>
+                <img src="images/service/russums.jpg" alt="" class="img-fluid">
+                <div class="centered-absolute">
+                  <span class="title small-grey-text">Russums </span>
+                  <h3>Delivering 25% increase year- on – year in organic traffic</h3>
+                </div>
+                </a>
+              </div>
+
+            </div>
         </section>
 
 
