--- a/app/contact.html
+++ b/app/contact.html
@@ -39,7 +39,7 @@
           <a class="nav-link" href="cro.html" data-hover="Conversion Rate Optimisation">Conversion Rate Optimisation</a>
         </li>
         </ul>
-        <a class="mobile bold d-none" href="+01142722444">0114 272 2444</a>        
+        <span class="mobile bold d-none">0114 272 2444</span>        
         <div class="sidenav">
           <ul class="nav-links">
             <li><a href="/">Home</a></li>
